--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="center">
         <div class="navigationIMG">
-            <a href="rocketman.html">
+            <a href="index.html">
             <img src="https://rocketman.learnwagtail.com/static/images/logo.24c25970fb09.png" alt="Rocketman"></a>
         </div>
         <div class="navigationTEXT">
