--- a/services.html
+++ b/services.html
@@ -16,7 +16,18 @@
 
 </head>
 <body>
-    <div class="center">
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.body.classList.add("loaded");
+        });
+        
+        function smoothReload() {
+            document.body.classList.add("fade-out");
+            setTimeout(() => location.reload(), 500);
+        }
+    </script>
+    
+   <div class="center">
         <div class="navigationIMG">
             <a href="index.html">
             <img src="https://rocketman.learnwagtail.com/static/images/logo.24c25970fb09.png" alt="Rocketman"></a>
