--- a/contact.html
+++ b/contact.html
@@ -20,35 +20,48 @@
     <script>
     let iapToken = "";
 
-    function getIapToken(callback) {
-        const client = google.accounts.oauth2.initTokenClient({
+    const iapClient = google.accounts.oauth2.initTokenClient({
         client_id: "536964574187-51j77krhjata7cbl8l23d9cb0hqtbnr4.apps.googleusercontent.com",
         scope: "",
-        callback: (tokenResponse) => {
-            iapToken = tokenResponse.access_token;
-            callback();
-        },
-        });
-        client.requestAccessToken();
-    }
+        callback: (resp) => {
+        iapToken = resp.access_token;
+        document.getElementById("contact-form").dispatchEvent(new Event("iap_ready"));
+        }
+    });
 
-    document.getElementById("contact-form").addEventListener("submit", function(e) {
+    document.getElementById("contact-form")
+        .addEventListener("submit", function(e) {
         e.preventDefault();
-        getIapToken(() => {
-        const formData = {};
-        fetch("https://rocketman-contact-form-536964574187.asia-south1.run.app//send-email", {
+        iapClient.requestAccessToken();
+        });
+
+    document.getElementById("contact-form")
+        .addEventListener("iap_ready", function() {
+        const form = this;
+        const data = {
+            name:    form.name.value,
+            company: form.company.value,
+            email:   form.email.value,
+            message: form.message.value
+        };
+
+        fetch("https://rocketman-contact-form-536964574187.asia-south1.run.app/send-email", {
             method: "POST",
             headers: {
-            "Content-Type": "application/json",
+            "Content-Type":  "application/json",
             "Authorization": "Bearer " + iapToken
             },
-            body: JSON.stringify(formData)
+            body: JSON.stringify(data)
         })
-        .then()
-        .catch();
+        .then(r => r.json())
+        .then(resp => {
+            if (resp.status === "success") showPopup("success");
+            else                       showPopup("fail");
+        })
+        .catch(() => showPopup("fail"));
         });
-    });
     </script>
+
 
     <div class="center">
         <div class="navigationIMG">
