--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 <input type="text" id="company" name="company" placeholder="Your Company" required>
                 <span style="font-size: 13px;">(SpaceX, Blue Origin, NASA, Virgin Galactic, Galactic Empire?)</span>
             
-                <label for="email">Your Eeeeeemail</label>
+                <label for="email">Your Email</label>
                 <input type="email" id="email" name="email" placeholder="Your Email" required>
             
                 <label for="message">Your Message</label>
