--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 Contact Us
             </div>
             <div class="text2">
-                Need a cleaning crew? Hate refueling your rocket in the middle of summer? Have too much money to spend <br> <br> Great!!! <br> <br> Reach out to us at: <br> <a href="tel:1-800-ROCKETMAN">1-800-ROCKETMAN</a> <br> <a href="mailto:haardik69@gmail.com">haardik69@gmail.com</a>
+                Need a cleaning crew? Hate refueling your rocket in the middle of summer? Have too much money to spend <br> <br> Great! <br> <br> Reach out to us at: <br> <a href="tel:1-800-ROCKETMAN">1-800-ROCKETMAN</a> <br> <a href="mailto:haardik69@gmail.com">haardik69@gmail.com</a>
             </div>
             <hr color="eeeee4" style="display: block; width: 100%; margin: 50px 0px;">
             <div>
